# webgpu-dawn

./: .gitignore  README.md  Setup.hs  cabal.project  webgpu-dawn.cabal
.github/workflows.bak/: ci.yml
benchmarks/: AsyncMatmulBench.hs  LinearBench.hs  OptimizedMatmulBench.hs  SubgroupMatmulBench.hs
cbits/: THIRD_PARTY_LICENSES.md  gpu.hpp  gpu_cpp_bridge.cpp  gpu_glfw_wrapper.cpp  gpu_wrapper.c  gpu_wrapper.h
cbits/numeric_types/: half.cpp  half.hpp
examples/: HelloGPU.hs  README.md  TriangleGUI.hs
examples-package/: examples.cabal
examples/assets/: triangle.gltf
examples/compute/: MatmulSubgroup.hs  README.md  VectorAdd.hs
examples/dsl/: AsyncPipelineDemo.hs  AutoBindingDSL.hs  BufferPoolDemo.hs  ChromeTracingDemo.hs  HighLevelAPI.hs  KernelFusion.hs  LayoutDemo.hs  MatmulDSL.hs  MatmulDSL3.hs  MatmulSubgroupDSL.hs  NamedExecutionDemo.hs  ParticleSystem.hs  ProfileTest.hs  README.md  SharedMemoryReduction.hs  StructFieldOffset.hs  StructGenericsDSL.hs  VectorAddDSL.hs
examples/graphics/: GLTFViewer.hs  HelloGPU.hs  README.md  TetrisGUI.hs
src/Graphics/WebGPU/: Dawn.hs  GLTF.hs
src/Graphics/WebGPU/Dawn/: ContT.hs  Context.hs  Float16.hs  GLFW.hs  IO.hs  Internal.hs  Kernel.hs  Tensor.hs  Types.hs
src/Graphics/WebGPU/Dawn/GLFW/: ContT.hs  Internal.hs
src/WGSL/: API.hs  AST.hs  Analyze.hs  CodeGen.hs  DSL.hs  Debug.hs  Execute.hs  Kernel.hs  Layout.hs  Monad.hs  Optimize.hs  Profile.hs  Struct.hs
src/WGSL/Async/: Pipeline.hs
src/WGSL/Memory/: Pool.hs
src/WGSL/Profile/: Execute.hs  Trace.hs
test/: Main.hs
