cabal-version:      3.0
name:               webgpu-dawn
version:            0.1.0.0
synopsis:           Haskell bindings to WebGPU Dawn for GPU computing and graphics
description:
  This package provides Haskell bindings to Google's Dawn WebGPU implementation,
  enabling GPU computing and graphics programming from Haskell. It wraps the
  gpu.cpp library which provides a high-level C++ interface to Dawn.
license:            MIT
author:             Junji Hashimoto
maintainer:         junji.hashimoto@gmail.com
category:           Graphics, GPU
build-type:         Custom

flag glfw
  description: Enable GLFW support for windowed graphics applications
  default: True
  manual: True

extra-source-files:
  README.md
  cbits/*.h
  cbits/*.c

custom-setup
  setup-depends:
    base >= 4.14 && < 5,
    Cabal >= 3.0,
    directory >= 1.3,
    filepath >= 1.4,
    process >= 1.6,
    http-conduit >= 2.3,
    bytestring >= 0.10,
    zip-archive >= 0.4,
    temporary >= 1.3

library
  exposed-modules:
    Graphics.WebGPU.Dawn
    Graphics.WebGPU.Dawn.Types
    Graphics.WebGPU.Dawn.Context
    Graphics.WebGPU.Dawn.Tensor
    Graphics.WebGPU.Dawn.Kernel

  if flag(glfw)
    exposed-modules: Graphics.WebGPU.Dawn.GLFW

  other-modules:
    Graphics.WebGPU.Dawn.Internal

  hs-source-dirs:   src
  default-language: Haskell2010

  build-depends:
    base >= 4.14 && < 5,
    bytestring >= 0.10,
    vector >= 0.12

  c-sources:
    cbits/gpu_wrapper.c

  cxx-sources:
    cbits/gpu_cpp_bridge.cpp

  if flag(glfw)
    cxx-sources: cbits/gpu_glfw_wrapper.cpp

  cxx-options:
    -std=c++17
    -Wall

  if flag(glfw)
    cxx-options: -DENABLE_GLFW

  include-dirs:
    cbits

  -- These will be populated by Setup.hs based on platform
  -- extra-lib-dirs:
  -- extra-include-dirs:

  extra-libraries:
    stdc++

  if flag(glfw)
    cpp-options: -DENABLE_GLFW

  if os(darwin)
    extra-libraries: c++
    frameworks: Metal, Foundation, QuartzCore, IOKit, IOSurface
    if flag(glfw)
      frameworks: Cocoa

  if os(linux)
    extra-libraries: stdc++

  ghc-options: -Wall -O2

test-suite webgpu-dawn-tests
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  default-language: Haskell2010

  build-depends:
    base,
    webgpu-dawn,
    hspec >= 2.7

  ghc-options: -Wall -threaded
