cabal-version:      3.0
name:               webgpu-dawn
version:            0.1.0.0
synopsis:           Haskell bindings to WebGPU Dawn for GPU computing and graphics
description:
  This package provides Haskell bindings to Google's Dawn WebGPU implementation,
  enabling GPU computing and graphics programming from Haskell. It wraps the
  gpu.cpp library which provides a high-level C++ interface to Dawn.
license:            MIT
author:             Junji Hashimoto
maintainer:         junji.hashimoto@gmail.com
homepage:           https://github.com/junjihashimoto/webgpu-dawn
category:           Graphics, GPU
build-type:         Custom
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/junjihashimoto/webgpu-dawn

flag glfw
  description: Enable GLFW support for windowed graphics applications
  default: True
  manual: True

custom-setup
  setup-depends:
    base >= 4.14 && < 5,
    Cabal >= 3.0 && < 3.13,
    directory >= 1.3 && < 1.4,
    filepath >= 1.4 && < 1.6,
    process >= 1.6 && < 1.7,
    http-conduit >= 2.3 && < 2.4,
    bytestring >= 0.10 && < 0.13,
    zip-archive >= 0.4 && < 0.5,
    temporary >= 1.3 && < 1.4

library
  exposed-modules:
    Graphics.WebGPU.Dawn
    Graphics.WebGPU.Dawn.Types
    Graphics.WebGPU.Dawn.Context
    Graphics.WebGPU.Dawn.Tensor
    Graphics.WebGPU.Dawn.Kernel
    Graphics.WebGPU.Dawn.IO
    Graphics.WebGPU.Dawn.ContT

  other-modules:
    Graphics.WebGPU.Dawn.Internal

  if flag(glfw)
    exposed-modules:
      Graphics.WebGPU.Dawn.GLFW
    other-modules:
      Graphics.WebGPU.Dawn.GLFW.Internal
      Graphics.WebGPU.Dawn.GLFW.ContT

  hs-source-dirs:   src
  default-language: Haskell2010

  build-depends:
    base >= 4.14 && < 5,
    bytestring >= 0.10 && < 0.13,
    vector >= 0.12 && < 0.14,
    transformers >= 0.5 && < 0.7

  c-sources:
    cbits/gpu_wrapper.c

  cxx-sources:
    cbits/gpu_cpp_bridge.cpp
    cbits/numeric_types/half.cpp

  if flag(glfw)
    cxx-sources: cbits/gpu_glfw_wrapper.cpp

  install-includes:
    cbits/gpu_wrapper.h
    cbits/gpu.hpp
    cbits/numeric_types/half.hpp
    cbits/utils/array_utils.hpp
    cbits/utils/logging.hpp

  cxx-options:
    -std=c++17
    -Wall

  if flag(glfw)
    cxx-options: -DENABLE_GLFW

  include-dirs:
    cbits
    cbits/numeric_types
    cbits/utils

  -- These will be populated by Setup.hs based on platform
  -- extra-lib-dirs:
  -- extra-include-dirs:

  extra-libraries:
    stdc++

  if flag(glfw)
    cpp-options: -DENABLE_GLFW

  if os(darwin)
    extra-libraries: c++
    frameworks: Metal, Foundation, QuartzCore, IOKit, IOSurface
    if flag(glfw)
      frameworks: Cocoa

  if os(linux)
    extra-libraries: stdc++

  ghc-options: -Wall

test-suite webgpu-dawn-tests
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  default-language: Haskell2010

  build-depends:
    base,
    webgpu-dawn,
    hspec >= 2.7

  ghc-options: -Wall -threaded
